--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   get: ^4.7.2
   shared_preferences: ^2.5.3
   image_picker: ^1.1.2
+  dio: ^5.8.0+1
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
