--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,13 @@ dependencies:
   image_picker: ^1.1.2
   dio: ^5.8.0+1
   dartz: ^0.10.1
+  google_maps_flutter: ^2.5.0
+  geolocator: ^10.1.0
+  firebase_core:
+  firebase_auth: ^5.5.4
+  google_sign_in:
+  flutter_facebook_auth:
+  cloud_firestore: ^5.6.8
 
 dev_dependencies:
   flutter_test:
